K8S/reservation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservationservice
  template:
    metadata:
      labels:
        app: reservationservice
    spec:
      containers:
        - name: reservationservice
          image: nfaarfaow/reservationservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: reservationservice
  ports:
  - name: reservationservice
    protocol: TCP
    port: 80
    targetPort: 80
